dynamix/force-app/main/default/objects/Enquiry__c/fields/Location1__c.field-meta.xml
<CustomField>
    <fullName>Location1__c</fullName>
    <label>Location1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Airoli</fullName>
            </value>
            <value>
                <fullName>Ambewadi</fullName>
            </value>
            <value>
                <fullName>Andheri E</fullName>
            </value>
            <value>
                <fullName>Andheri W</fullName>
            </value>
            <value>
                <fullName>Bandra E</fullName>
            </value>
            <value>
                <fullName>Bandra W</fullName>
            </value>
            <value>
                <fullName>Bhandup E</fullName>
            </value>
            <value>
                <fullName>Bhandup W</fullName>
            </value>
            <value>
                <fullName>Bhayandar E</fullName>
            </value>
            <value>
                <fullName>Bhayandar W</fullName>
            </value>
            <value>
                <fullName>Bhyander E</fullName>
            </value>
            <value>
                <fullName>Bhyander W</fullName>
            </value>
            <value>
                <fullName>Borivali E</fullName>
            </value>
            <value>
                <fullName>Borivali W</fullName>
            </value>
            <value>
                <fullName>Chakala</fullName>
            </value>
            <value>
                <fullName>Chandivali</fullName>
            </value>
            <value>
                <fullName>Charkop</fullName>
            </value>
            <value>
                <fullName>Charni Roard</fullName>
            </value>
            <value>
                <fullName>Chembur</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Churchgate</fullName>
            </value>
            <value>
                <fullName>Curry Road</fullName>
            </value>
            <value>
                <fullName>Dadar E</fullName>
            </value>
            <value>
                <fullName>Dadar W</fullName>
            </value>
            <value>
                <fullName>Dahisar E</fullName>
            </value>
            <value>
                <fullName>Dahisar W</fullName>
            </value>
            <value>
                <fullName>Dombivli E</fullName>
            </value>
            <value>
                <fullName>Dombivli W</fullName>
            </value>
            <value>
                <fullName>Fort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>