dynamix/force-app/main/default/objects/Enquiry__c/fields/Lost_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reasons__c</fullName>
    <label>Lost Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Construction Status Mismatch (RTMI)</fullName>
            </value>
            <value>
                <fullName>Construction Status Mismatch (UC)</fullName>
            </value>
            <value>
                <fullName>Booked Elsewhere</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Looking for property</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead</fullName>
            </value>
            <value>
                <fullName>Future Prospect</fullName>
            </value>
            <value>
                <fullName>Location issue</fullName>
            </value>
            <value>
                <fullName>Plan on Hold/Planned Postoned</fullName>
            </value>
            <value>
                <fullName>Not Contactable</fullName>
            </value>
            <value>
                <fullName>Looking for Commercial Property</fullName>
            </value>
            <value>
                <fullName>CP Enquiry</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Test Lead(Junk)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>