dynamix/force-app/main/default/objects/Enquiry__c/fields/Marketing_communication__c.field-meta.xml
<CustomField>
    <fullName>Marketing_communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing communication</label>
    <type>Checkbox</type>
</CustomField>