dynamix/force-app/main/default/objects/Enquiry__c/fields/Masked_Primary_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Masked_Primary_Phone_Number__c</fullName>
    <formula>IF( OR( ISNULL(Text(Country_Code__c)) ,ISBLANK(Text(Country_Code__c))) , &apos;+91&apos;,  text(Country_Code__c) )+&apos;******&apos;+RIGHT( Primary_Mobile_Number__c , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Phone Number</label>
    <type>Text</type>
</CustomField>