dynamix/force-app/main/default/objects/Enquiry__c/fields/New_Record__c.field-meta.xml
<CustomField>
    <fullName>New_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Record</label>
    <type>Checkbox</type>
</CustomField>