dynamix/force-app/main/default/objects/Enquiry__c/fields/Primary_Mobile_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile_Number_Text__c</fullName>
    <label>Primary Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>