dynamix/force-app/main/default/objects/Enquiry__c/fields/Project_FId__c.field-meta.xml
<CustomField>
    <fullName>Project_FId__c</fullName>
    <formula>Project__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>custom filter Project Id</label>
    <type>Text</type>
</CustomField>