dynamix/force-app/main/default/objects/Enquiry__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <formula>Project__r.Location__c +&apos; &apos;+Project__r.City__c+&apos; &apos;+TEXT(Project__r.State__c)+&apos; &apos;+Project__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Location</label>
    <type>Text</type>
</CustomField>