dynamix/force-app/main/default/objects/Enquiry__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <formula>Project__r.Name</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>