dynamix/force-app/main/default/objects/Enquiry__c/fields/Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Round Robin</label>
    <type>Checkbox</type>
</CustomField>