dynamix/force-app/main/default/objects/Enquiry__c/fields/Sent_SMS_for_Incoming_Call__c.field-meta.xml
<CustomField>
    <fullName>Sent_SMS_for_Incoming_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent SMS for Incoming Call</label>
    <type>Checkbox</type>
</CustomField>