dynamix/force-app/main/default/objects/Enquiry__c/fields/Site_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Date__c</fullName>
    <formula>DATEVALUE(Site_Visit_Scheduled_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visit Date</label>
    <type>Date</type>
</CustomField>