dynamix/force-app/main/default/objects/Enquiry__c/fields/Site_Visit_Done_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Done_Date__c</fullName>
    <label>Site Visit Done Date</label>
    <type>DateTime</type>
</CustomField>