dynamix/force-app/main/default/objects/Enquiry__c/fields/Site_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Time__c</fullName>
    <formula>TIMEVALUE(Site_Visit_Scheduled_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visit Time</label>
    <type>Time</type>
</CustomField>