dynamix/force-app/main/default/objects/Enquiry__c/fields/Task_Target__c.field-meta.xml
<CustomField>
    <fullName>Task_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Target</label>
    <referenceTo>Task_Target__c</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>