dynamix/force-app/main/default/objects/Enquiry__c/fields/Time_of_Enquiry_Drop__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Enquiry_Drop__c</fullName>
    <label>Time of Enquiry Drop</label>
    <type>Time</type>
</CustomField>