dynamix/force-app/main/default/objects/Enquiry__c/fields/Time_Spent_in_Interested_Stage__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_in_Interested_Stage__c</fullName>
    <defaultValue>&quot;Stage not yet Completed.&quot;</defaultValue>
    <label>Time Spent in Interested Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>