dynamix/force-app/main/default/objects/Enquiry__c/fields/Type_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Residence__c</fullName>
    <label>Type of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Company Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>