dynamix/force-app/main/default/objects/Enquiry__c/fields/Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Code__c</fullName>
    <label>Unique Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>