dynamix/force-app/main/default/objects/Enquiry__c/fields/UTM_medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_medium__c</fullName>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>