dynamix/force-app/main/default/objects/Enquiry__c/validationRules/Cannot_be_changed_to_None.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_be_changed_to_None</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   NOT(ISNULL( PRIORVALUE( Category__c ) ))  ,  ISPICKVAL( Category__c , &apos;&apos;)  )</errorConditionFormula>
    <errorDisplayField>Category__c</errorDisplayField>
    <errorMessage>Cannot be modified</errorMessage>
</ValidationRule>