dynamix/force-app/main/default/objects/Enquiry__c/validationRules/cannot_update_record_once_Site_Visit_Don.validationRule-meta.xml
<ValidationRule>
    <fullName>cannot_update_record_once_Site_Visit_Don</fullName>
    <active>true</active>
    <description>cannot update record once Site Visit Done.</description>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Stage__c),&quot;Site Visit Done&quot;),not(isnew()))</errorConditionFormula>
    <errorMessage>You cannot update Enquiry once Site Visit Done.</errorMessage>
</ValidationRule>