dynamix/force-app/main/default/objects/Enquiry__c/validationRules/Country_Code_and_10_Digits_Mobile_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Code_and_10_Digits_Mobile_Number</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX( Primary_Mobile_Number__c , &quot;[0-9]{10}&quot;))</errorConditionFormula>
    <errorDisplayField>Primary_Mobile_Number__c</errorDisplayField>
    <errorMessage>Mobile Number Should Contain a Country Code and followed by 10 Digits Mobile Number</errorMessage>
</ValidationRule>