dynamix/force-app/main/default/objects/Enquiry__c/validationRules/If_Lost_Stage_Lost_Reason_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Lost_Stage_Lost_Reason_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL (Stage__c, &quot;Lost&quot;), ISBLANK (TEXT( Lost_Reasons__c) ) )</errorConditionFormula>
    <errorDisplayField>Lost_Reasons__c</errorDisplayField>
    <errorMessage>Cannot Update a Enquiry as &apos;lost&apos; without a reason tagged in the Lost Reasons.</errorMessage>
</ValidationRule>