dynamix/force-app/main/default/objects/Enquiry__c/validationRules/Only_Team_Lead_or_Admin_Can_Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Team_Lead_or_Admin_Can_Change_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED( OwnerId ), 
     $UserRole.Name  &lt;&gt; &quot;SFDC Admin&quot;, 
$UserRole.Name  &lt;&gt; &quot;Team Leader&quot;,PRIORVALUE(Round_Robin__c) == true
)</errorConditionFormula>
    <errorMessage>Only SFDC Admin and Team Leader can change the Owner.</errorMessage>
</ValidationRule>