dynamix/force-app/main/default/objects/Enquiry__c/validationRules/Remove_permission_for_editing_the_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Remove_permission_for_editing_the_record</fullName>
    <active>true</active>
    <errorConditionFormula>AND (not(isnew()), 
     $UserRole.Name  &lt;&gt; &quot;SFDC Admin&quot;, 
 $User.Id &lt;&gt; OwnerId ,
$UserRole.Name  &lt;&gt; &quot;Team Leader&quot;,PRIORVALUE(Round_Robin__c) == true
)</errorConditionFormula>
    <errorMessage>Oops...you don&apos;t have the necessary privileges to edit this record. See your administrator for help.</errorMessage>
</ValidationRule>