dynamix/force-app/main/default/objects/Enquiry__c/validationRules/Site_Visit_Date_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_Visit_Date_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL (Stage__c, &quot;Site Visit Done&quot;), ISNULL( Site_Visit_Done_Date__c )  )</errorConditionFormula>
    <errorMessage>Cannot Update a Enquiry as &apos;Site Visit Done&apos; without a Site Visit Done date.</errorMessage>
</ValidationRule>