dynamix/force-app/main/default/objects/Enquiry__c/validationRules/Site_Visit_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_Visit_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Stage__c , &apos;Site Visit Scheduled&apos;) , ISNULL( Site_Visit_Scheduled_Date__c ) )</errorConditionFormula>
    <errorMessage>You cannot mark Stage as Site Visit Schedule Without Scheduling a Site Visit.</errorMessage>
</ValidationRule>