dynamix/force-app/main/default/objects/Enquiry__c/validationRules/The_Lead_owner_cannot_make_any_changes.validationRule-meta.xml
<ValidationRule>
    <fullName>The_Lead_owner_cannot_make_any_changes</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(PRIORVALUE(Stage__c), &quot;Lost&quot;)&amp;&amp;($User.Id = OwnerId)&amp;&amp; PRIORVALUE(Round_Robin__c) == true &amp;&amp; Duplicate_Lead__c ==false,TRUE, FALSE)</errorConditionFormula>
    <errorMessage>The Enquiry owner cannot make any changes to the enquiry details because this enquiry is marked as Lost.</errorMessage>
</ValidationRule>