dynamix/force-app/main/default/objects/Enquiry__c/validationRules/Validation_for_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Stage</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL (PRIORVALUE( Stage__c),&quot;Lost&quot;) ||  ISPICKVAL (PRIORVALUE( Enquiry_Qualification_Tags__c) , &quot;Qualified&quot; ) )</errorConditionFormula>
    <errorMessage>Cannot do the Changes</errorMessage>
</ValidationRule>