dynamix/force-app/main/default/objects/Enquiry__c/listViews/My_Enquiry.listView-meta.xml
<ListView>
    <fullName>My_Enquiry</fullName>
    <columns>NAME</columns>
    <columns>Contact_Person__c</columns>
    <columns>Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>Enquiry_Source__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Enquiry</label>
</ListView>